--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@ header {
   color: navy;
 }
 
+.circDown {
+  position: relative;
+  display: inline-flex;
+  flex-direction: row;
+  padding-top: 80px;
+}
+
 .circPaolo {
   float: left;
   border-radius: 50%;
@@ -59,7 +66,6 @@ header {
   margin: 0 auto;
   display: flex;
   flex-direction: row;
-
 }
 .loginbox {
   text-align: center;
@@ -140,7 +146,6 @@ header {
 .row {
   margin: 10px;
 }
-
 
 .topnav {
   overflow: hidden;
@@ -470,12 +475,11 @@ table {
   width: 100%;
   text-align: center;
   margin-top: 0.5em;
-  
 }
 
 .modal h1 {
   font-size: 1.75em;
-  color: green
+  color: green;
 }
 
 .icon-bar {
@@ -683,7 +687,6 @@ td:hover {
   }
   #Eventbtn {
     margin-left: 5em;
-   
   }
 }
 
