--- a/styleMODAL.css
+++ b/styleMODAL.css
@@ -1,4 +1,3 @@
-  
 body {
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -23,7 +22,7 @@ header::after {
   clear: both;
 }
 
-.topnav {
+/*.topnav {
   overflow: hidden;
   background-color: transparent;
 }
@@ -56,7 +55,7 @@ nav a:hover {
     transition-duration: 120ms;
     background-color: rgb(69, 69, 250); ;
   }
-
+*/
 /*
 
 input[type=button] {
@@ -108,7 +107,6 @@ nav {
   margin-right: 15px;
 }
 
-
 .topnav label {
   display: none;
 }
@@ -116,7 +114,6 @@ nav {
 #hamburger {
   display: none;
 }
-
 
 .loginbox {
   text-align: center;
@@ -132,7 +129,8 @@ nav {
   padding-top: 30px;
   margin-bottom: 0em;
   color: rgb(1, 0, 49);
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
 .loginbox p {
@@ -189,10 +187,10 @@ nav {
   margin: 10px;
 }
 
-#fourth-row{
+#fourth-row {
   margin: 1.5em;
 }
-input[type=button] {
+input[type="button"] {
   width: 40%;
   height: 40px;
   border: 1px solid #d7d7d7;
