icon bar margin

--- a/style.css
+++ b/style.css
@@ -519,6 +519,7 @@ table {
   background-color: #eeeeee;
   width: auto;
   padding: 0.2em;
+  margin-top: 50px;
   top: 8%;
   right: 2%;
   -webkit-transform: translateY(-50%);
